[tool.poetry]
name = "sbe-stitch"
version = "0.1.0"
description = ""
authors = ["BeardedPlatypus <mwtegelaers@gmail.com>"]
readme = "README.md"
packages = [{include = "sbe_stitch"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pillow = "^10.3.0"
typer = "^0.12.3"


[tool.poetry.group.package.dependencies]
pyinstaller = "^6.8.0"


[tool.poetry.group.linters.dependencies]
ruff = "^0.4.8"
mypy = "^1.10.0"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"

[tool.ruff]
target-version = "py311"


[tool.mypy]
python_version = "3.11"
packages = "sbe_stitch"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.main]
cmd = "python -m sbe_stitch"
help = "Run the main project"


[tool.poe.tasks.package]
cmd = "pyinstaller sbe_stitch/__main__.py --name sbe_stitch --onefile"
help = "Package this application with pyinstaller"


[tool.poe.tasks.ruff]
cmd = "ruff"
help = "Run ruff linter"


[tool.poe.tasks.mypy]
cmd = "mypy"
help = "Run mypy linter"


[tool.semantic_release]
build_command = "echo '-'"
commit_message = "chore(release): released {version}"
commit_parser = "angular"
logging_use_named_masks = false
tag_format = "v{version}"
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = []

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
